--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="Start your development with Meyawo landing page.">
     <meta name="author" content="Devcrud">
     <title>Milan Yadav</title>
+    <!-- favicon -->
+    <link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/imgs/favicon.png" type="image/x-icon">
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
