--- a/index.html
+++ b/index.html
@@ -285,9 +285,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="testimonial-card">
+                        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="milan361ydv" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://np.linkedin.com/in/milan361ydv?trk=profile-badge"></a></div>
+              
+                    </div>
+                </div>
             </div>
         </div> <!-- end of container -->
     </section> <!-- end of testimonial section -->
+
 
 
 
@@ -318,7 +325,7 @@
 
     <!-- Meyawo js -->
     <script src="assets/js/meyawo.js"></script>
-
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 
 </html>
